--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,11 +4,34 @@
   <title>Estimator</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+  <script type="text/javascript" src="//use.typekit.net/jnj3tjq.js"></script>
+  <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
-<%= yield %>
+  <% unless current_page? root_path or current_page? estimates_path %>
+  <header>
+    <nav class="hidden-menu">
+      <div class="container">Hidden menu here...</div>
+    </nav>
+    <nav class="container">
+      <%= link_to image_tag("e_final.svg"), estimates_path, :class => "logo" %>
+      <div class="nav"><a href="#">About</a><a href="#" class="menu-trigger">Settings</a></div>
+      </ul>
+    </nav>
+  </header>
+  <% end %>
+
+  <div class="container">
+  <%= yield %>
+  </div>
+
+  <footer>
+    <div class="container">
+      <p>♥ 2013 — Olle Werme</p>
+    </div>
+  </footer>
 
 </body>
 </html>
