--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,15 @@
   <% unless current_page? root_path or current_page? estimates_path %>
   <header>
     <nav class="hidden-menu">
-      <div class="container">Hidden menu here...</div>
+      <div class="container">
+        <div class="nav">
+          <a href="">Lorem</a>
+          <a href="">Ipsum</a>
+          <a href="">Dolor</a>
+          <a href="">Sit</a>
+          <a href="">Amet</a>
+        </div>
+      </div>
     </nav>
     <nav class="container">
       <%= link_to image_tag("e_final.svg"), estimates_path, :class => "logo" %>
