Add functionality for project types

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,5 @@
 @import 'normalize.css';
+@import 'icons.css';
 // @import 'foundation-icons.css';
 
 $blue: #00A7E0;
@@ -14,7 +15,12 @@ body {
 }
 
 h1, h2, h3 {
-  font-weight: normal;
+  font-family: 'brandon-grotesque';
+  font-weight: 500;
+}
+
+h1 span {
+  color: $blue;
 }
 
 h2 {
@@ -25,6 +31,8 @@ h2 {
 a {
   color: $blue;
   text-decoration: none;
+
+  &:hover { color: #00ccff; }
 }
 
 li { color: $blue; }
@@ -34,18 +42,16 @@ li { color: $blue; }
   margin-bottom: 0.3em;
   background: #fdd;
   transition: all 0.1s;
+  &:hover { background: #fee; }
 
   a {
     display: inline-block;
-    padding: 0.2em 0.4em;
+    padding: 0.2em 0 0.2em 0.6em;
     color: red;
-  }
-  a.cross {
-    padding-left: 0;
-    &:hover { color: #000; }
-  }
-  &:hover {
-    background: #fee;
+    &.cross {
+      padding: 0.2em 0.2em 0.2em 0;
+      &:hover { color: #000; }
+    }
   }
 }
 
@@ -67,6 +73,7 @@ header {
   img { display: block; width: 42px; height: 42px; }
 
   .nav {
+    padding: 0 1em;
     position: absolute;
     top: 0;
     right: 0;
@@ -77,8 +84,6 @@ header {
       text-transform: uppercase;
       letter-spacing: 0.2em;
       line-height: 42px;
-
-      &:hover { color: #00ccff; }
     }
   }
 }
@@ -123,7 +128,7 @@ footer {
 .btn:hover,
 .btn:active,
 input[type="submit"]:hover,
-input[type="submit"]:active { background: #00BEFF; }
+input[type="submit"]:active { background: #00BEFF; color: white; }
 
 .front .btn {
   margin: 1em 0;
@@ -222,6 +227,13 @@ table {
 .menu-open {
   margin-top: 0;
 }
+
+.project-icons {
+  text-align: center;
+  font-size: 2em;
+}
+
+a.delete-icon:hover { color: red; }
 
 @media screen and (min-width:560px) {
   .container { width: 560px; }
