--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -1,9 +1,12 @@
 <h1>Settings</h1>
+<p>Lorem ipsum Est Excepteur voluptate labore nulla Duis in sunt do occaecat officia ullamco deserunt.</p>
 <h2>Project types</h2>
 <p>
   <% @project_types.each do |p| %>
-    <span class="tag"><%= link_to p.name, p %><%= link_to 'x', p, :method => :delete, :class => "cross" %></span>
+    <span class="tag"><%= link_to p.name, p %><%= link_to content_tag(:i, nil, class: "icon-cancel"), p, :method => :delete, :class => "cross" %></span>
   <% end %>
 </p>
 
-<%= link_to "New project type", new_project_type_path, class: "btn" %>
+<%= link_to new_project_type_path, class: "btn" do %>
+  <i class="icon-doc-new"></i> New project type
+<% end %>
