--- a/app/views/tasks/new.html.haml
+++ b/app/views/tasks/new.html.haml
@@ -1,1 +1,1 @@
-<%= render :partial => "form", :locals => { :task => @task, :project => @estimate } %>
+= render :partial => "form", :locals => { :task => @task, :project => @estimate }
