--- a/app/views/project_types/new.html.haml
+++ b/app/views/project_types/new.html.haml
@@ -1,6 +1,6 @@
-<h1>New project type</h1>
-<%= form_for(@project_type) do |p| %>
-  <%= p.text_field :name, :placeholder => "Project type name" %>
-  <%= p.text_field :description, :placeholder => "Project type description" %>
-  <%= p.submit "Create project type" %>
-<% end #form_for %>
+%h1 New project type
+= form_for(@project_type) do |p|
+  = p.text_field :name, :placeholder => "Project type name"
+  = p.text_field :description, :placeholder => "Project type description"
+  = p.submit "Create project type"
+- end #form_for
