--- a/app/views/tasks/_form.html.haml
+++ b/app/views/tasks/_form.html.haml
@@ -1,7 +1,6 @@
-<% if params[:estimate_id] %>
-  <%= render partial: '/tasks/estimate_task_form', locals: { estimate: params[:estimate_id] } %>
-<% elsif params[:project_type_id] %>
-  <%= render partial: '/tasks/project_type_task_form', locals: { project_type: params[:project_type_id] } %>
-<% else %>
-  <p>There is something special about this task. It's too cool for editing. Let's keep it as is.</p>
-<% end %>
+- if params[:estimate_id]
+  = render partial: '/tasks/estimate_task_form', locals: { estimate: params[:estimate_id] }
+- elsif params[:project_type_id]
+  = render partial: '/tasks/project_type_task_form', locals: { project_type: params[:project_type_id] }
+- else
+  %p There is something special about this task. It's too cool for editing. Let's keep it as is.
