--- a/app/views/project_types/show.html.haml
+++ b/app/views/project_types/show.html.haml
@@ -6,10 +6,9 @@
   - else
     This project type has no description. Did you know that a kitten dies every time someone creates a project without a proper description? Now you do.
 
-%section.inline
-  = form_for @project_type do |p|
-    = p.text_field :default_rate, :placeholder => @project_type.default_rate || "none", :size => 4
-    = p.submit "Set default rate"
+= form_for @project_type, html: { class: "inline" } do |p|
+  = p.text_field :default_rate, :placeholder => @project_type.default_rate || "none", :size => 4
+  = p.submit "Set default rate"
 
 - unless @project_type.tasks.empty?
   %table
