Add functionality for sub tasks

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -179,15 +179,18 @@ input[type="submit"]:active { background: #00BEFF; color: white; }
 input[type="text"], input[type="email"], input[type="password"], textarea {
   display: inline-block;
   margin-bottom: 1em;
-  border: 2px solid #bdc3c7;
+  border: 2px solid #ddd;
   outline: none;
-  color: #34495e;
   padding: 0.2em 0.4em;
   -webkit-appearance: none;
   -webkit-box-shadow: none;
   box-shadow: none;
   transition: border .25s linear, color .25s linear;
   -webkit-backface-visibility: hidden;
+}
+
+input::-webkit-input-placeholder {
+  color: #ddd;
 }
 
 input[type="text"]:hover,
@@ -223,22 +226,40 @@ table {
   font: 0.8em/1.5 'source-code-pro';
   width: 100%;
 
+  td { padding: 0.4em; white-space: nowrap; }
+  td.rate, td.hours, td.fee { width: 50px; }
+  tr:last-child { border: 0; }
+
   thead {
     color: #EE8943;
     border-bottom: 2px solid #EE8943;
     text-transform: uppercase;
     font-size: 0.8em;
   }
-  tbody tr:nth-child(odd) { background: #fff3e3; }
-  tbody tr td:last-child { text-align: right; }
-  tbody tr:hover { color: #EE8943; }
 
-  td { padding: 0.4em; white-space: nowrap; }
+  tbody {
+    background: #fff3e3;
+
+    tr { border-bottom:1px solid #edb; }
+    tr:hover, tr.sub-task:hover { color: #EE8943; }
+    tr td:last-child { text-align: right; }
+  }
+
+  tr.sub-task {
+    background: white;
+    color: #ca8;
+
+    td { font-size: 0.85em; }
+    td:first-child { padding-left: 0.6em; }
+    td:last-child { font-size: 1em; }
+  }
 
   span {
     font-size: 0.8em;
     color: #EE8943;
   }
+
+
 }
 
 .total {
